[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/researh/Support.gd" type="Script" id=7]
[ext_resource path="res://Buttons/Button_research.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 1 )

[node name="Support" type="Node2D"]
script = ExtResource( 7 )

[node name="Art" type="Button" parent="."]
margin_left = 169.0
margin_right = 338.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Артиллерия"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gran" type="Button" parent="."]
margin_left = 338.0
margin_right = 507.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Гранаты"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Med" type="Button" parent="."]
margin_left = 507.0
margin_right = 676.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Медицина"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireSup" type="Button" parent="."]
margin_left = 676.0
margin_right = 856.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Огневая поддержка"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artillery" type="Node2D" parent="."]
visible = false

[node name="Артеллерия 1914 года" parent="Artillery" instance=ExtResource( 8 )]
margin_left = 1.81899e-12
margin_top = 279.726
margin_right = 750.0
margin_bottom = 654.726

[node name="Артеллерия 1916 года" parent="Artillery/Артеллерия 1914 года" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = -3.05176e-05
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Артеллерия 1918 года" parent="Artillery/Артеллерия 1914 года/Артеллерия 1916 года" instance=ExtResource( 8 )]
margin_left = 750.0
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Артеллерия Французского образца" parent="Artillery/Артеллерия 1914 года/Артеллерия 1916 года/Артеллерия 1918 года" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = 21.0
margin_right = 1500.0
margin_bottom = 396.0
rect_scale = Vector2( 1, 1 )

[node name="Grenades" type="Node2D" parent="."]
visible = false

[node name="Граната" parent="Grenades" instance=ExtResource( 8 )]
margin_top = 95.7256
margin_right = 750.0
margin_bottom = 470.726

[node name="Противотанковая граната" parent="Grenades/Граната" instance=ExtResource( 8 )]
margin_left = 750.0
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Гранатный арбалет" parent="Grenades/Граната/Противотанковая граната" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = 6.10352e-05
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="FireSupport" type="Node2D" parent="."]
position = Vector2( 845, 744.878 )

[node name="Окопный гранотомет" parent="FireSupport" instance=ExtResource( 8 )]
margin_left = -845.0
margin_top = -315.152
margin_right = -95.0
margin_bottom = 59.8483

[node name="Противотанковое ружье" parent="FireSupport/Окопный гранотомет" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = -30.0002
margin_right = 1500.0
margin_bottom = 345.0
rect_scale = Vector2( 1, 1 )

[node name="Огнемет \'Клейвф\'" parent="FireSupport/Окопный гранотомет/Противотанковое ружье" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = 0.000244141
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Переносимый Баскийский пулемет" parent="FireSupport/Окопный гранотомет/Противотанковое ружье/Огнемет \'Клейвф\'" instance=ExtResource( 8 )]
margin_left = 750.0
margin_top = -0.000244141
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Миномет Эдварда Мосли" parent="FireSupport/Окопный гранотомет/Противотанковое ружье/Огнемет \'Клейвф\'/Переносимый Баскийский пулемет" instance=ExtResource( 8 )]
margin_left = 750.0
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[node name="Газовое ружье" parent="FireSupport/Окопный гранотомет/Противотанковое ружье/Огнемет \'Клейвф\'/Переносимый Баскийский пулемет/Миномет Эдварда Мосли" instance=ExtResource( 8 )]
margin_left = 750.0
margin_right = 1500.0
margin_bottom = 375.0
rect_scale = Vector2( 1, 1 )

[connection signal="pressed" from="Art" to="." method="_on_Art_pressed"]
[connection signal="pressed" from="Gran" to="." method="_on_Gran_pressed"]
[connection signal="pressed" from="FireSup" to="." method="_on_FireSup_pressed"]
